--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -82,7 +82,7 @@
   
   /* Z-INDEX SCALE */
   --z-dropdown: 1000;
-  --z-sticky: 1020;
+  --z-sticky: 100010; /* Higher than SafeRideFund modals and all content */
   --z-fixed: 1030;
   --z-modal-backdrop: 1040;
   --z-modal: 1050;
